@@ -1,7 +1,7 @@
 /****************************************************************************
  * up_reprioritizertr.c
  *
- *   Copyright (C) 2007-2009 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2007-2009, 2013 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -91,13 +91,13 @@ void up_reprioritize_rtr(_TCB *tcb, uint8_t priority)
 
   if (tcb->task_state < FIRST_READY_TO_RUN_STATE ||
       tcb->task_state > LAST_READY_TO_RUN_STATE
-#if SCHED_PRIORITY_MIN > UINT8_MIN
+#if SCHED_PRIORITY_MIN > 0
       || priority < SCHED_PRIORITY_MIN
 #endif
 #if SCHED_PRIORITY_MAX < UINT8_MAX
       || priority > SCHED_PRIORITY_MAX
 #endif
-      )
+    )
     {
        PANIC(OSERR_BADREPRIORITIZESTATE);
     }
